--- a/one/navbar.html
+++ b/one/navbar.html
@@ -3,8 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <title>导航栏</title>
+    <style>
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: grey;
+        }
+        li{
+            float: left;
+        }
+        li a, .btn{
+            display: inline-block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .drop a:hover{
+            background-color: black;
+        }
+        .drop{
+            display: inline-block;
+        }
+        .money{
+            display: none;
+            position: absolute;
+            background-color: white;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        }
+        .money a{
+            border: none;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+        .money a:hover{
+            background-color: white;
+        }
+        .drop:hover .money{
+            display: block;
+        }
+        .black_overlay{
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffff;
+            z-index:1001;
+            -moz-opacity: 0.8;
+            opacity:.80;
+            filter: alpha(opacity=80);
+        }
+        .white_content {
+            display: none;
+            position: absolute;
+            top: 10%;
+            left: 30%;
+            background-color: white;
+            z-index:1002; /* 数字的大小指明了div的相对层，数字大的在上层 */
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
+    <ul>
+        <li><a href="#" class="per">个人</a></li>
+        <li><a href="#" class="add">撩一下</a></li>
+        <div class="drop">
+            <a href="#" class="btn">打赏</a>
+            <div class="money">
+                <div><a href="#" onclick="openWindow(this)">微信</a></div>
+                <div><a href="#" onclick="openWindow(this)">支付宝</a></div>
+                <div id="WeChat" class="white_content">
+                    <img src='img/2.jpg' />
+                </div>
+                <div id="Alipay" class="white_content">
+                    <img src='img/3.jpg' />
+                </div>
+                <div id="black" class="black_overlay" onClick="closeWindow()"></div>
 
+<!--                <button id="Alipay" style="width: 100%">支付宝</button>-->
+<!--                <button id="WeChat" style="width: 100%">微信</button>-->
+<!--                <a href="#" class="Alipay">支付宝</a>-->
+<!--                <a href="#" class="WeChat">微信</a>-->
+            </div>
+        </div>
+    </ul>
+    <script  type="text/javascript">
+        function openWindow(obj){
+            var WeChat = "WeChat";
+            var Alipay = "Alipay"
+            document.getElementById(WeChat).style.display='block';
+            document.getElementById(Alipay).style.display='block';
+            document.getElementById('black').style.display='block';
+        }
+        function closeWindow(){
+            document.getElementById('WeChat').style.display='none';
+            document.getElementById('Alipay').style.display='none';
+            document.getElementById('black').style.display='none';
+        }
+    </script>
 </body>
 </html>
