--- a/one/navbar.html
+++ b/one/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title>导航栏</title>
@@ -11,7 +11,7 @@
             <li><a href="#" class="per">个人</a></li>
                 <li><a href="#" id = "add_per" onclick = "openWindow(this)">撩一下</a></li>
                 <div id="add" class="white_content" style="left: 15%;">
-                    <img src="../img/1.png" >
+                    <img src="../img/1.png" alt="QQ" />
                 </div>
                 <div id="black1" class="black_overlay" onClick="closeWindow()"></div>
             <div class="drop">
@@ -20,10 +20,10 @@
                     <div><a href="#" id="pay_WeChat" onclick="openWindow(this)">微信</a></div>
                     <div><a href="#" id="pay_Alipay" onclick="openWindow(this)">支付宝</a></div>
                     <div id="WeChat" class="white_content">
-                        <img src="../img/2.jpg" >
+                        <img src="../img/2.jpg" alt="WeChat" />
                     </div>
                     <div id="Alipay" class="white_content">
-                        <img src="../img/3.jpg" />
+                        <img src="../img/3.jpg" alt="Alipay" />
                     </div>
                     <div id="black" class="black_overlay" onClick="closeWindow()"></div>
                 </div>
