--- a/two/huawei.html
+++ b/two/huawei.html
@@ -176,11 +176,11 @@
         $("#navbarDropdown").hover(
             function(){
                 $("#dropDownMenu").show();
-            });//为了鼠标可以进入下拉框
+            });
         $("#dropDownMenu").hover(function() {
-            $(this).show();//鼠标进入下拉框
+            $(this).show();
         }, function() {
-            $(this).hide();//鼠标离开下拉框后，就会消失
+            $(this).hide();
         });
     </script>
 </html>
